# cpp_skeleton

./: .clang-format  .gitattributes  .gitmodules  CMakeLists.txt  README.md
src/: main.cpp  test.cpp
